Staff mapper changed

--- a/src/main/resources/templates/conference-add.html
+++ b/src/main/resources/templates/conference-add.html
@@ -15,7 +15,7 @@
 
 <div class="container-fluid mx-auto mt-5 col-sm-5">
 
-    <form action="#" th:action="@{'/conference-add'}" th:object="${conference}" method="POST">
+    <form action="#" th:action="@{'/staff/conference-add'}" th:object="${conference}" method="POST">
         <div class="form-group">
             <div class="form-group col-md-6">
                 <label for="inputName">Name</label>
