--- a/src/main/resources/templates/conference-dashboard.html
+++ b/src/main/resources/templates/conference-dashboard.html
@@ -36,7 +36,7 @@
 
         <tr>
             <!--Link /topic-dashboard for staff to manage topics start/end and see questions-->
-            <th scope="row"><a href="/topic-dashboard">Deconstructing Deep Learning</a></th>
+            <th scope="row"><a href="/staff/topic-dashboard">Deconstructing Deep Learning</a></th>
             <td>Super popular and informative topic</td>
             <td>7</td>
             <td>2020-05-14 07:15:00</td>
@@ -46,7 +46,7 @@
 <!--        Add class="table-success" if topic is active-->
         <tr class="table-success">
             <!--Link /topic-dashboard for staff to manage topics start/end and see questions-->
-            <th scope="row"><a href="/topic-dashboard">You can AI like an Expert</a></th>
+            <th scope="row"><a href="/staff/topic-dashboard">You can AI like an Expert</a></th>
             <td>You can AI like an Expert is a three-day conference with technical talks in the fields of Big Data,</td>
             <td>15</td>
             <td>2020-05-14 08:00:00</td>
