--- a/src/main/resources/templates/staffreg.html
+++ b/src/main/resources/templates/staffreg.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="container-fluid mx-auto mt-5 col-sm-4">
-    <form th:action="@{'/registration-staff'}" th:object="${staff}" method="POST" >
+    <form th:action="@{'/staff/registrationn'}" th:object="${staff}" method="POST" >
                 <div class="form-group">
                 <input type="email" th:field="*{email}"  class="form-control" id="exampleInputEmail1" aria-describedby="Email" placeholder="Email">
                 </div>
