--- a/src/main/resources/templates/conference-edit.html
+++ b/src/main/resources/templates/conference-edit.html
@@ -15,7 +15,7 @@
 
 <div class="container-fluid mx-auto mt-5 col-sm-5">
 
-    <form action="#" th:action="@{'/conference-edit/'+${confId}}" th:object="${conference}" method="post">
+    <form action="#" th:action="@{'/staff/conference-edit/'+${confId}}" th:object="${conference}" method="post">
         <div class="form-group">
             <div class="form-group col-md-6">
                 <label for="inputName">Name</label>
