--- a/src/main/resources/templates/stafflogin.html
+++ b/src/main/resources/templates/stafflogin.html
@@ -19,14 +19,14 @@
         <div th:if="${param.logout}">
             You have been logged out.
         </div>
-        <form action="#" th:action="@{'/stafflogin'}" method="post">
+        <form action="#" th:action="@{'/staff/login'}" method="post">
 
             <div class="form-group"><input class="form-control" type="text" name="username" placeholder="Email"></div>
             <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Password"></div>
             <div><input type="submit" value="Log In"/></div>
         </form>
         <div>
-            <a th:href="@{'/staffreg'}">Register</a>
+            <a th:href="@{'/staff/registration'}">Register</a>
         </div>
     </div>
 </body>
