fix link in staffdashboard.html and fragments.html

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -23,7 +23,7 @@
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li class="nav-item">
-                    <a  class="nav-link" th:href="@{'/logout_admin'}">Log out</a>
+                    <a  class="nav-link" th:href="@{'/staff/logout_admin'}">Log out</a>
                 </li>
             </ul>
         </div>
