--- a/src/main/resources/templates/staffdashboard.html
+++ b/src/main/resources/templates/staffdashboard.html
@@ -33,7 +33,7 @@
 
             <!--See only 'ADMIN'-->
             <div sec:authorize="hasAnyAuthority('ADMIN')">
-                <th><a class="btn btn-primary btn-sm" href="/staff/conferenceadd">Add</a></th>
+                <th><a class="btn btn-primary btn-sm" href="/staff/conference-add">Add</a></th>
             </div>
             <!---->
         </tr>
