--- a/src/main/resources/templates/topic-add.html
+++ b/src/main/resources/templates/topic-add.html
@@ -15,7 +15,7 @@
 
 <div class="container-fluid mx-auto mt-5 col-sm-5">
 
-    <form form action="#" th:action="@{'/staff/topic-add/'+${confId}}" th:object="${topic}" method="post" enctype="multipart/form-data">
+    <form form action="#" th:action="@{'/staff/topic-add/'+${confId}}" th:object="${topic}" method="POST" enctype="multipart/form-data">
         <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputEmail4">Name</label>
@@ -40,6 +40,7 @@
                    name="meeting-time" value=""
                    min="2020-04-01T00:00" max="2025-09-14T00:00">
             </div>
+            <div th:if="${#fields.hasErrors('end')}" th:errors="*{end}" ></div>
 
         </div>
         <div class="form-group">
