--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -7,7 +7,7 @@
 <body>
 <div th:fragment="admin-header">
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-        <a class="navbar-brand" href="/dashboard"><i class="fas fa-crown"></i> Dashboard</a>
+        <a class="navbar-brand" href="/staff/dashboard"><i class="fas fa-crown"></i> Dashboard</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="navbarColor03">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="">Manage Users</a>
+                    <a class="nav-link" href="/staff/list">Manage Users</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Statistics</a>
