--- a/src/main/resources/templates/schedule.html
+++ b/src/main/resources/templates/schedule.html
@@ -36,7 +36,7 @@
         </div>
             <div class="col-sm-3 mx-auto">
                 <figure class="figure">
-                    <img src="../static/images/image-placeholder.png" th:src="@{/images/image-placeholder.png}" class="figure-img img-fluid rounded" height="350" width="350"/>
+                    <img src="../../../../resources/images/image-placeholder.png" th:src="@{/images/image-placeholder.png}" class="figure-img img-fluid rounded" height="350" width="350"/>
                     <figcaption class="figure-caption" th:text="${t.getSpeaker()} + ', '+ ${t.getSpeakerdesc()}"></figcaption>
                 </figure>
                 <hr>
