--- a/src/main/resources/templates/topic-dashboard.html
+++ b/src/main/resources/templates/topic-dashboard.html
@@ -37,8 +37,8 @@
 
 <!--    TODO: add topic start-end functions-->
     <div class="mx-auto col-sm-8">
-    <a class="btn btn-success" href="/"><i class="far fa-play-circle"></i></a>
-    <a class="btn btn-danger" href="#" ><i class="far fa-stop-circle"></i></a>
+    <a class="btn btn-success" th:href="'/staff/topic-start/' + ${topicId}"><i class="far fa-play-circle"></i></a>
+    <a class="btn btn-danger" th:href="'/staff/topic-end/' + ${topicId}" ><i class="far fa-stop-circle"></i></a>
     </div>
 
 </div>
