--- a/src/main/resources/templates/topic-dashboard.html
+++ b/src/main/resources/templates/topic-dashboard.html
@@ -36,7 +36,7 @@
     <h1 class="text-center" th:text="${topic.getTheme()}"></h1>
 
 <!--    TODO: add topic start-end functions-->
-    <div class="mx-auto col-sm-1">
+    <div class="mx-auto col-sm-1" th:if="${!topic.isEnded()}">
         <a class="btn btn-success" onclick="hideButton()"   id="myButton1" th:href="'/staff/topic-start/' + ${topicId}"><i class="far fa-play-circle"></i></a>
         <a class="btn btn-danger" onclick="hideButton()"  id="myButton2" th:href="'/staff/topic-end/' + ${topicId}"><i class="far fa-stop-circle"></i></a>
     </div>
