--- a/src/main/resources/templates/topic-dashboard.html
+++ b/src/main/resources/templates/topic-dashboard.html
@@ -73,7 +73,7 @@
                     <input type="checkbox" checked>
                 </div>
                 <div th:if="${!q.getAnswerStatus()}">
-                    <a class="btn btn-success btn-small" th:href="'/question/answer/' + ${topicId}  + '/' + ${q.getId()}"><i class="fas fa-hourglass-start"></i> Answered</a>
+                    <a class="btn btn-success btn-small" th:href="'/question/answer/' + ${topicId}  + '/' + ${q.getId()}">Answered</a>
                 </div>
             </td>
 
