--- a/src/main/resources/templates/visitor-registration.html
+++ b/src/main/resources/templates/visitor-registration.html
@@ -13,9 +13,9 @@
 
         <div class="">
             <h1>Welcome!</h1>
-            <h2 th:if="${conference!=null}" th:text="${conference.getTheme()}">CONFERENCE NAME is going right now</h2>
-            <p>(next closest event will take place at: 24 Apr)</p>
-            <h5><a href="" >click here to see all our events ></a></h5>
+            <h2 th:if="${conference!=null}" th:text="${conference.getTheme()}"></h2>
+            <p>(next closest event will take place at: )</p>
+            <h5><a href="/" class="text-decoration-none text-dark">click here to see all our events ></a></h5>
         </div>
 
         <div class="col-md-10 d-flex justify-content-center mx-auto ">
