conference time checking added, exception for handling unavailable conference added, code for showing time on some templates refactored

--- a/src/main/resources/templates/conferenceError.html
+++ b/src/main/resources/templates/conferenceError.html
@@ -28,6 +28,7 @@
 
             <h2>404 - The Conference can't be found</h2>
         </div>
+        <a href="/">Homepage</a>
         <a href="#">Contact us</a>
     </div>
 </div>
