--- a/src/main/resources/templates/visitor-registration.html
+++ b/src/main/resources/templates/visitor-registration.html
@@ -12,10 +12,9 @@
     <div class="col-md-10 mx-auto text-center">
 
         <div class="">
-            <h1>Welcome!</h1>
-            <h2 th:if="${conference!=null}" th:text="${conference.getTheme()}"></h2>
-            <p>(next closest event will take place at: )</p>
-            <h5><a href="/" class="text-decoration-none text-dark">click here to see all our events ></a></h5>
+            <h5>Welcome!</h5>
+            <h2 th:text="${conference.getTheme()}"></h2>
+            <p><a href="/" class="text-decoration-none text-dark">click here to see all our events ></a></p>
         </div>
 
         <div class="col-md-10 d-flex justify-content-center mx-auto ">
