--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,23 +21,17 @@
 
             </div>
 
-            <div class="col-sm-8 mx-auto py-3" th:each="c : ${conferences}">
-                <div class="row py-5 px-3 topic border border-light" >
-                    <div class="col-sm-8 mx-auto text-left">
+            <div class="col-sm-10 mx-auto py-3">
+                    <div style="float: left;" class="col-sm-5 text-left border border-light py-4 px-5 mx-2 my-2" th:each="c : ${conferences}">
 
                         <span><a th:href="${c.getId()}  + '/schedule'" class="text-decoration-none text-dark"><h4 class="h4" th:text="${c.getTheme()}"></h4></a></span>
-                        <p><b>Time:</b> <span th:text="${c.getStart().getDayOfMonth()} + ' ' +  ${c.getStart().getMonth()} + ' ' + ${c.getStart().getHour()} + ':' + ${c.getStart().getMinute()}"></span> - <span th:text="${c.getEnd().getHour()} + ':' + ${c.getEnd().getMinute()}"></span></p>
+                        <p><b>Time:</b>
+                            <span th:text="${#temporals.format(c.getStart(), 'dd.MM HH:mm')}"></span> - <span th:text="${#temporals.format(c.getEnd(), 'HH:mm')}"></span></p>
                         <p th:text="${c.getDescription()}"></p>
                         <p><b>Address:</b> <span th:text="${c.getAddress()}"></span></p>
                     </div>
-                    <div class="col-sm-3 mx-auto">
-                        <figure class="figure">
-                            <img src="../static/images/image-placeholder.png" th:src="@{/images/image-placeholder.png}" class="figure-img img-fluid rounded" height="350" width="350"/>
-                        </figure>
-                    </div>
 
                 </div>
-            </div>
 
         </div>
 
